--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -16,7 +16,8 @@
         <ImageView
             android:id="@+id/imgLogo"
             android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_height="225dp"
+            android:layout_centerHorizontal="true"
             android:layout_margin="50dp"
             android:scaleType="centerCrop"
             android:src="@drawable/logo" />
@@ -41,31 +42,31 @@
             android:padding="15dp" />
 
         <LinearLayout
-            android:layout_below="@+id/edtSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-        <Button
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:id="@+id/btnEntrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/edtSenha"
-            android:layout_marginTop="30dp"
-            android:text="Entrar" />
+            android:orientation="horizontal">
 
-        <Button
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:id="@+id/btnSair"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edtSenha"
-            android:layout_marginTop="30dp"
-            android:layout_toRightOf="@+id/btnEntrar"
-            android:text="Sair" />
+            <Button
+                android:id="@+id/btnEntrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edtSenha"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:text="Entrar" />
+
+            <Button
+                android:id="@+id/btnSair"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edtSenha"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@+id/btnEntrar"
+                android:layout_weight="1"
+                android:text="Sair" />
 
         </LinearLayout>
 
